# SafeForest

./: .gitmodules  README.md  pyproject.toml
.dvc/: config
dev/: README.md  classes.npy  compute_confusion_matrix.py  config.py  create_training_list.py  evaluate_class_fraction.py  evaluate_fraction.py  isocontour_demo.py  merge_classes.py  octomap_raycasting.py  octree.py  presentation.mplstyle  remap_dataset.py  report.mplstyle  show_label_map.py  show_seg_video.py  template.py  video_demo.py  visualize_mesh_and_traj.py  visualize_semantic_labels.py  yamaha_to_cityscapes.py
dev/3D/: isocontour_demo.py  octomap_raycasting.py  octree.py
dev/dataset_creation/: README.md  SA_to_cityscapes.py  colors_to_inds.py  compute_summary_statistics.py  copy_from_file.py  create_training_list.py  downsample_flip.py  evaluate_class_fraction.py  merge_classes.py  remap_dataset.py  semfire_to_cityscapes.py  write_mmseg_configs.py  write_timestamped_images.py  yamaha_to_cityscapes.py  zero_pad_files.py
dev/model_evaluation/: confusion_matrix.py  evaluate_model.py  load_mmseg_json_logs.py  model_sweep.py  plot_comparisons.py  train_docker.py  train_homemade.py
dev/ros/: correct_map_jump.py  (+4 more)
res/: test.pkl
safeforest/: config.py  create_instance.py  generate_segmentation.py  test_create_instance.py  test_generate_segmentation.py
scripts/: imc_proc_launch.launch  launch_rviz.sh  run_example.sh  run_finetuning_evals.sh  test_bisenet.sh  test_bisenet_inference.sh  test_gpu.sh  train_bisenet.sh  train_bisenet_cityscapes.sh  train_bisenet_tiny.sh
vis/: confusion.npy
(+26 files in other folders)
