[tool.poetry]
name = "safeforest"
version = "0.1.0"
description = "\"Utility scripts for the Safe Forest semantic mapping project\""
authors = ["Davdi Russell <davidrus@andrew.cmu.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.4"
matplotlib = "^3.4.3"
scipy = "^1.7.2"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
isort = "^5.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
