[tool.poetry]
name = "safeforest"
version = "0.1.0"
description = "\"Utility scripts for the Safe Forest semantic mapping project\""
authors = ["Davdi Russell <davidrus@andrew.cmu.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.21.4"
matplotlib = "^3.4.3"
scipy = "^1.7.2"
scikit-image = "^0.18.3"
ubelt = "^0.10.1"
tqdm = "^4.62.3"
opencv-python = "^4.5.4"
scikit-learn = "^1.0.1"
seaborn = "^0.11.2"
open3d = "^0.14.1"
pyrr = "^0.10.3"
timerit = "^0.3.0"
distinctipy = "^1.2.1"
pyvista = "^0.33.2"
PVGeo = "^2.1.0"
octomap-python = "^1.8.0"
glooey = "^0.3.6"
trimesh = "^3.9.42"
imgviz = "^1.4.1"
Shapely = "^1.8.0"
rospkg = "^1.3.0"
numpy-ros = "^0.1.3"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
isort = "^5.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
